# hdx-scraper-unosat

./: Dockerfile  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py  unosat.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml  run-python-tests.yml
config/: hdx_dataset_static.yml  project_configuration.yml
src/hdx/scraper/unosat/: __main__.py  pipeline.py  unosat.py
src/hdx/scraper/unosat/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_unosat.py
tests/fixtures/: feed
tests/fixtures/input/: project_configuration.yml
