#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-unosat"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api>= 6.5.2",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
  "feedparser",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-unosat"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.unosat.__main__:main"
